index.scss
// Reset
html {
  box-sizing: border-box;
  font-size: 16px;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body, h1, h2, h3, h4, h5, h6, p, ol, ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

ol, ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

// End reset

// Vars

:root {
  --font-family-sans: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
  --font-family-mono: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;

  --color-primary: hsl(5, 100%, 52%);
  --color-primary-l: hsl(5, 70%, 72%);
  --color-primary-d: hsl(358, 63%, 44%);
  --color-secondary: hsl(232, 29%, 15%);
  --color-secondary-l: hsl(254, 6%, 41%);
  --color-secondary-d: hsl(232, 29%, 10%);
  --color-body-bg: hsl(232, 10%, 97%);
  --color-body-fg: hsl(0, 0%, 0%);
  --color-body-fg-quiet: hsl(0, 0%, 27%);
  --color-body-fg-muted: hsl(0, 0%, 50%);
  --color-primary-fg: hsl(0, 0%, 100%);
  --color-textarea-bg: hsl(0, 0%, 100%);
  --color-textarea-fg: hsl(0, 0%, 0%);
  --color-links: var(--color-primary-d);
  --color-border: hsl(0, 0%, 46%);
  --color-outline: var(--color-secondary);
  --color-radio: var(--color-primary);

  --btn: hsl(0, 0%, 80%);
  --btn-text: hsl(0, 0%, 0%);
  --btn-hover: hsl(0, 0%, 85%);
  --btn-active: hsl(0, 0%, 75%);
  --btn-primary: var(--color-primary-d);
  --btn-primary-text: hsl(0, 0%, 100%);
  --btn-primary-hover: var(--color-primary);
  --btn-primary-active: var(--color-primary-d);

  --shadow: 0px 8px 15px rgb(0 0 0 / 10%), 0px 3px 5px rgb(0 0 0 / 15%);
  --text-shadow: 0px 2px 3px hsla(0, 0%, 0%, 25%);
  --text-shadow-filter: drop-shadow(0px 2px 3px hsla(0, 0%, 0%, 25%));
  --border-radius: 4px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-primary: hsl(5, 100%, 52%);
    --color-primary-l: hsl(5, 70%, 72%);
    --color-primary-d: hsl(358, 63%, 44%);
    --color-secondary: hsl(232, 29%, 15%);
    --color-secondary-l: hsl(254, 6%, 41%);
    --color-secondary-d: hsl(232, 29%, 10%);
    --color-body-bg: hsl(232, 10%, 10%);
    --color-body-fg: hsl(0, 0%, 80%);
    --color-body-fg-quiet: hsl(0, 0%, 65%);
    --color-body-fg-muted: hsl(0, 0%, 50%);
    --color-primary-fg: hsl(0, 0%, 100%);
    --color-textarea-bg: hsl(30, 3%, 20%);
    --color-textarea-fg: hsl(0, 0%, 90%);
    --color-links: var(--color-primary-l);
    --color-border: hsl(0, 0%, 46%);
    --color-outline: var(--color-secondary);
    --color-radio: var(--color-primary-d);
  }
}

// End vars

* {
  box-sizing: border-box;
}

html,
body {
  padding: 0;
  margin: 0;
  width: 100%;
  height: 100%;
  font-family: var(--font-family-sans);
  background-color: var(--color-body-bg);
  color: var(--color-body-fg);
}

a, a:visited {
  color: var(--color-links);
}

header {
  text-align: center;
  background-color: var(--color-primary-d);
  color: var(--color-primary-fg);
  padding: 16px;
  box-shadow: 0 0 8px 3px hsla(0, 0%, 0%, 0.25);

  .title {
    font-size: 48px;
    font-weight: bold;
    margin: 0;
  }
}

footer {
  background-color: var(--color-body-bg);
  text-align: center;
  font-size: 14px;
  font-style: italic;
  color: var(--color-body-fg-quiet);
  padding: 12px;
}

.site-description {
  text-align: center;
  font-size: 18px;
  margin-top: 48px;
  margin-bottom: 16px;
}

main {
  max-width: 2000px;
  margin: 0 auto;
  width: 100%;
  display: flex;
  flex-direction: column-reverse;
  gap: 24px;
  padding: 24px 24px 48px;

  @media (min-width: 1280px) {
    flex-direction: row;
  }
}

.controls-container {
  flex-basis: 40%;
  flex-grow: 1;
  display: flex;
  align-items: center;
  justify-content: center;

  .controls {
    display: flex;
    flex-direction: column;
    gap: 16px;

    .threshold {
      display: flex;
      flex-direction: column;
      gap: 8px;

      .threshold-grid {
        display: grid;
        grid-template-rows: 1fr;
        gap: 8px;

        @media (min-width: 440px) {
          grid-template-columns: 4fr 8fr 1fr;
          place-items: center;
        }
      }
    }

    .button-row {
      display: flex;
      gap: 8px;
      justify-content: space-between;

      > button:last-child {
        margin-left: auto;
      }
    }
  }
}

.drop-container {
  text-align: center;
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  gap: 12px;

  svg {
    width: 48px;
    height: 48px;
  }
}

.output {
  flex-grow: 1;
  flex-basis: 500px;
  height: 1000px;
  max-height: 80vh;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px dashed var(--color-border);

  &.has-image {
    border: 0;
  }

  img {
    object-fit: scale-down;
  }

  img, .placeholder {
    max-height: 100%;
    max-width: 100%;
  }
}

// Utils

.overlay-container {
  position: relative;
  display: inline-block;

  .overlay {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: hsla(0, 0%, 0%, 0.8);
    color: white;
    display: grid;

    > .content {
      margin: auto;
      line-height: 1.5em;
      display: flex;
      flex-direction: column;
      align-items: center;

      svg {
        animation: rotate infinite 1s;
      }
    }
  }
}


.button-icon {
  border: 0;
  border-radius: var(--border-radius);
  background-color: var(--color-primary);
  color: white;
  cursor: pointer;
  padding: 6px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background-color 0.1s ease;
  box-shadow: var(--shadow);

  * {
    filter: var(--text-shadow-filter);
  }

  &:hover {
    background-color: var(--color-primary-l);
  }

  &:active {
    background-color: var(--color-primary-d);
  }
}

// Hide visually only
.sr-only {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

@keyframes rotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(180deg);
  }
}

.btn {
  background: var(--btn);
  color: var(--btn-text);
  border: 0;
  border-radius: 3px;
  box-shadow: 0 1px 2px 0 hsla(0, 0%, 0%, 0.19);
  padding: 12px 24px;
  cursor: pointer;
  font-size: 1rem;
  font-weight: bold;

  &:disabled {
    cursor: initial;
    opacity: 0.8;
    filter: saturate(0.9);
  }

  &:not(:disabled) {
    &:hover {
      background: var(--btn-hover);
    }

    &:active {
      background: var(--btn-active);
    }
  }

  &.primary {
    background: var(--btn-primary);
    color: var(--btn-primary-text);

    &:not(:disabled) {
      &:hover {
        background: var(--btn-primary-hover);
      }

      &:active {
        background: var(--btn-primary-active);
      }
    }
  }

  &.borderless {
    background: transparent;
    color: var(--color-body-fg);

    &:not(:disabled) {
      &:hover {
        background: rgba(0, 0, 0, 0.05);
      }

      &:active {
        background:  rgba(0, 0, 0, 0.05);
      }
    }
  }
}

input[type="range"] {
  -webkit-appearance: none;
  appearance: none;
  background: transparent;
  cursor: pointer;
  width: 15rem;
}

input[type="range"] {
  &::-webkit-slider-runnable-track {
    background: #3a3a3a;
    height: 7px;
    border-radius: 6px;
    box-shadow: inset 0 2px 2px 0 #00000042;
  }

  &::-moz-range-track {
    background: #3a3a3a;
    height: 7px;
    border-radius: 6px;
    box-shadow: inset 0 2px 2px 0 #00000042;
  }

  &::-webkit-slider-thumb {
    -webkit-appearance: none;
    background: var(--color-radio);
    width: 8px;
    height: 20px;
    border-radius: 3px;
    box-shadow: 0 1px 3px 0 hsl(0deg 0% 0% / 30%);
    margin-top: -5px;
  }

  &::-moz-range-thumb {
    -webkit-appearance: none;
    background: var(--color-radio);
    width: 8px;
    height: 20px;
    border-radius: 3px;
    box-shadow: 0 1px 3px 0 hsl(0deg 0% 0% / 30%);
    margin-top: -5px;
  }
}

fieldset {
  margin-top: 16px;
  border: 0;
  padding: 0;

  legend {
    font-weight: bold;
    font-size: 1.2rem;
    margin-bottom: 12px;
    padding: 0;
  }
}

.custom-radio-group {
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
}

.custom-radio {
  display: grid;
  grid-template-columns: 1em auto;
  gap: 0.5em;
  cursor: pointer;

  input[type=radio] {
    /* Add if not using autoprefixer */
    -webkit-appearance: none;
    appearance: none;
    /* For iOS < 15 to remove gradient background */
    background-color: var(--color-body-bg);
    /* Not removed via appearance */
    margin: 0;
    width: 18px;
    height: 18px;
    border: 1px solid var(--color-body-fg);
    box-shadow: inset 0 0 0 1px var(--color-body-fg-muted);
    border-radius: 50%;
    display: grid;
    place-content: center;
    cursor: inherit;
    outline: none;

    &:focus {
      outline: 2px solid var(--color-outline);
    }

    &:before {
      content: "";
      width: 10px;
      height: 10px;
      border-radius: 50%;
      opacity: 0;
      box-shadow: inset 10px 10px 0 1px var(--color-radio);
    }

    &:checked {
      box-shadow: inset 0 0 0 1px var(--color-radio);

      &:before {
        opacity: 1;
      }
    }

    &:not(:checked):active:before {
      opacity: 0.5;
    }
  }

  &:hover {
    input[type=radio] {
      border-color: var(--color-body-fg-quiet);
    }
  }
}

